shalinee | TEST | correct button alignemnt for hindi/en

--- a/apps/web-giddh/src/app/shared/header/components/share-account-modal/share-account-modal.component.scss
+++ b/apps/web-giddh/src/app/shared/header/components/share-account-modal/share-account-modal.component.scss
@@ -66,9 +66,9 @@
 }
 
 .selected-permission{
-    width: calc(100% - 96px) !important;
-    min-width:200px;
-    margin-right:10px;
+    width: calc(100% - 123px) !important;
+    min-width: 200px;
+    margin-right: 10px;
 }
 
 .btn-share {
