--- a/apps/web-giddh/src/assets/css/style-2.scss
+++ b/apps/web-giddh/src/assets/css/style-2.scss
@@ -1343,6 +1343,7 @@ modal-container.modal {
 .form-box .btn {
     min-width: 73px;
     margin-right: 2px;
+    width: 95px;
 }
 
 .table-no-border tr th,
@@ -4242,7 +4243,7 @@ label {
 }
 
 .calc-width {
-    width: calc(100% - 93px) !important;
+    width: calc(100% - 112px) !important;
 }
 
 .view-forms {
